--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "json-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "json-server": "^0.17.2",
     "vue": "^3.2.13",
